# rage_obj

./: .gitignore  CMakeLists.txt  main.cpp  obj_math.h  obj_parser.cpp  obj_parser.h  readme.md
demo/: CMakeLists.txt  main.cpp  parser.c  parser.h
incl/rage_obj/: obj_parser.h
src/: obj_parser.c
